# Proton-Duplicate-Launcher

./: .gitignore  LICENSE  README.md  proton_dupe_launcher.py  pyproject.toml
.github/workflows/: build-linux.yml  release.yml
packaging/linux/: proton-dupe-launcher.desktop
packaging/pyinstaller/: proton-dupe-launcher.spec
protondupe_launcher/: __init__.py  __main__.py  backend.py  cli.py  gui.py  host.py
scripts/: build_appimage.sh  build_linux.sh  install_desktop_entry.sh  uninstall_desktop_entry.sh
tests/: test_proton_dupe_launcher.py
